[EFL] http/tests/navigation/useragent test failed after r192459. https://bugs.webkit.org/show_bug.cgi?id=151340

Reviewed by Gyuyoung Kim.

We need the convert process the predifined value to string.

* platform/efl/UserAgentEfl.cpp:
(WebCore::versionForUAString):


Canonical link: https://commits.webkit.org/169604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192634 268f45cc-cd09-0410-ab3c-d52691b4dbfc